// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> when children and all required props are passed and \`onChange\` prop is passed should match the snapshot 1`] = `
<div>
  <div>
    <div
      class="iradio indeterminate"
    >
      <input
        style="opacity: 0; position: absolute;"
        type="radio"
        value="1"
      />
      <ins
        class="iCheck-helper"
        role="presentation"
        style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
      />
    </div>
    <div
      class="iradio indeterminate"
    >
      <input
        style="opacity: 0; position: absolute;"
        type="radio"
        value="2"
      />
      <ins
        class="iCheck-helper"
        role="presentation"
        style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
      />
    </div>
  </div>
</div>
`;

exports[`<RadioGroup /> when children and all required props are passed and \`radioWrapTag\` prop is "span" and \`radioWrapClassName\` prop is "test" should match the snapshot 1`] = `
<div>
  <div>
    <div
      class="test"
    >
      <div
        class="iradio indeterminate"
      >
        <input
          style="opacity: 0; position: absolute;"
          type="radio"
          value="1"
        />
        <ins
          class="iCheck-helper"
          role="presentation"
          style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
        />
      </div>
    </div>
    <div
      class="test"
    >
      <div
        class="iradio indeterminate"
      >
        <input
          style="opacity: 0; position: absolute;"
          type="radio"
          value="2"
        />
        <ins
          class="iCheck-helper"
          role="presentation"
          style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<RadioGroup /> when children and all required props are passed should match the snapshot 1`] = `
<div>
  <div>
    <div
      class="iradio indeterminate"
    >
      <input
        style="opacity: 0; position: absolute;"
        type="radio"
        value="1"
      />
      <ins
        class="iCheck-helper"
        role="presentation"
        style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
      />
    </div>
    <div
      class="iradio indeterminate"
    >
      <input
        style="opacity: 0; position: absolute;"
        type="radio"
        value="2"
      />
      <ins
        class="iCheck-helper"
        role="presentation"
        style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0; cursor: pointer;"
      />
    </div>
  </div>
</div>
`;
